--- a/cfg/colourhud_stream.cfg
+++ b/cfg/colourhud_stream.cfg
@@ -7,6 +7,9 @@ con_logfile cfg/colourhud_stream.txt
 echo "stream{"
 
 colhud_chatpos_stream_write
+colhud_sstream_1_write
+colhud_sstream_2_write
+colhud_sstream_3_write
 colhud_dsp_stream_write
 colhud_fp_stream_write
 colhud_hawp_stream_write
