--- a/cfg/colourhud_config.cfg
+++ b/cfg/colourhud_config.cfg
@@ -90,6 +90,7 @@ alias colhud_spacern_dist_12_write "echo xpos -5 textAlignment west"
 alias colhud_spacern_dist_13_write "echo xpos -86 textAlignment west"
 alias colhud_spacern_dist_14_write "echo ypos r95"
 alias colhud_spacern_dist_15_write "echo ypos r150"
+alias colhud_spacern_dist_16_write "echo xpos 5"
 alias colhud_sn_hb_dist_write "echo xpos -5"
 alias colhud_sn_hn_dist_write "echo xpos -35"
 alias colhud_hbn_dist_1_write "echo xpos 3"
@@ -858,9 +859,11 @@ alias spacern_dist_13_def "alias colhud_spacern_dist_13_write echo xpos -86 text
 alias spacern_dist_14_def "alias colhud_spacern_dist_14_write echo ypos r95"
 // classmodelpanel
 alias spacern_dist_15_def "alias colhud_spacern_dist_15_write echo ypos r190"
+// CHealthAccountPanel
+alias spacern_dist_16_def "alias colhud_spacern_dist_16_write echo xpos 5"
 
 
-alias spacern_dist_def "spacern_dist_1_def;spacern_dist_2_def;spacern_dist_3_def;spacern_dist_4_def;spacern_dist_5_def;spacern_dist_6_def;spacern_dist_7_def;spacern_dist_8_def;spacern_dist_9_def;spacern_dist_10_def;spacern_dist_11_def;spacern_dist_12_def;spacern_dist_13_def;spacern_dist_14_def;spacern_dist_15_def"
+alias spacern_dist_def "spacern_dist_1_def;spacern_dist_2_def;spacern_dist_3_def;spacern_dist_4_def;spacern_dist_5_def;spacern_dist_6_def;spacern_dist_7_def;spacern_dist_8_def;spacern_dist_9_def;spacern_dist_10_def;spacern_dist_11_def;spacern_dist_12_def;spacern_dist_13_def;spacern_dist_14_def;spacern_dist_15_def;spacern_dist_16_def"
 
 
 // spacer
@@ -895,8 +898,10 @@ alias spacern_dist_13_close "alias colhud_spacern_dist_13_write echo xpos -54 te
 alias spacern_dist_14_close "alias colhud_spacern_dist_14_write echo ypos r55"
 // classmodelpanel
 alias spacern_dist_15_close "alias colhud_spacern_dist_15_write echo ypos r150"
+// CHealthAccountPanel
+alias spacern_dist_16_close "alias colhud_spacern_dist_16_write echo xpos c-225"
 
-alias spacern_dist_close "spacern_dist_1_close;spacern_dist_2_close;spacern_dist_3_close;spacern_dist_4_close;spacern_dist_5_close;spacern_dist_6_close;spacern_dist_7_close;spacern_dist_8_close;spacern_dist_9_close;spacern_dist_10_close;spacern_dist_11_close;spacern_dist_12_close;spacern_dist_13_close;spacern_dist_14_close;spacern_dist_15_close"
+alias spacern_dist_close "spacern_dist_1_close;spacern_dist_2_close;spacern_dist_3_close;spacern_dist_4_close;spacern_dist_5_close;spacern_dist_6_close;spacern_dist_7_close;spacern_dist_8_close;spacern_dist_9_close;spacern_dist_10_close;spacern_dist_11_close;spacern_dist_12_close;spacern_dist_13_close;spacern_dist_14_close;spacern_dist_15_close;spacern_dist_16_close"
 
 // Health value when health bar is on (normalmode)
 alias spacern_hb_dist_def "alias colhud_sn_hb_dist_write echo xpos -5"
