--- a/cfg/colourhud_spacern.cfg
+++ b/cfg/colourhud_spacern.cfg
@@ -60,6 +60,9 @@ echo "}"
 echo "classmodelpanel{"
 colhud_spacern_dist_15_write
 echo "}"
+echo "CHealthAccountPanel{"
+colhud_spacern_dist_16_write
+echo "}"
 
 echo "}"
 con_logfile ""
